# buddycode

./: .env.example  DEPLOYMENT.md  PR_DESCRIPTION.md  QUICKSTART.md  REACT_AGENT.md  README.md  TESTING.md  examples.py  examples_react_agent.py  langgraph.json  pyproject.toml  pytest.ini  quicksort_educational_simple.py  start_langgraph.sh  test_agent_quick.py  test_tools.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/buddycode/: __init__.py  chat_model.py  react_agent.py  tools.py  tui.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_langgraph_server.py  test_tools.py  test_tui.py  test_tui_comprehensive.py  test_tui_copy.py  test_tui_edge_cases.py  test_tui_import.py  test_tui_streaming.py  test_tui_widgets.py
