[project]
name = "buddycode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "derongtang.sam", email = "derongtang.sam@bytedance.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-mcp-adapters>=0.1.13",
    "langchain[openai]>=1.0.7",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]",
    "pexpect>=4.9.0",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "textual>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
buddycode = "buddycode.tui:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
